# ESP_MorseCode

./: README.md
Gatt_client/: README.md  sdkconfig
Gatt_client/gatt_client/: README.md  sdkconfig  sdkconfig.old
Gatt_client/gatt_client/main/: CMakeLists.txt  callback_functions.c  callback_functions.h  common.c  common.h  gattc_demo.c  morse_client.c  morse_common.c  morse_common.h  morse_functions.c  morse_functions.h  poll_event_task_functions.c  poll_event_task_functions.h  testing_functions.c  testing_functions.h
Gatt_client/gatt_client/main/morse_src/: callback_functions.h  morse_functions.c  poll_event_task_functions.c  poll_event_task_functions.h
Gatt_client/main/: morse_client.c
Gatt_client/main/morse_src/: callback_functions.c  callback_functions.h  morse_functions.c  morse_functions.h  poll_event_task_functions.c
Gatt_server/: README.md  sdkconfig
Gatt_server/gatt_server/: sdkconfig
Gatt_server/gatt_server/main/: CMakeLists.txt  gatts_demo.c  morse_mbuf.c  morse_mbuf.h  morse_server.c
Gatt_server/main/: CMakeLists.txt
Images/: weoifh
touch_button/: CMakeLists.txt  README.md  pytest_touch_button.py  sdkconfig  sdkconfig.old
touch_button/main/: CMakeLists.txt  Kconfig.projbuild  touch_button.c  touch_button_example_main.c
