idf_component_register(SRCS "callback_functions.c" "morse_common.c" "morse_functions.c" "poll_event_task_functions.c" "morse_client.c" "morse_src/morse_common.c" "morse_src/callback_functions.c" "morse_src/morse_functions.c" "morse_src/poll_event_task_functions.c"
                    INCLUDE_DIRS "." "morse_src")
